Update etc.md